# ubpf

./: CMakeLists.txt  README.md  requirements.txt
.github/workflows/: main.yml  posix.yml  udpate-docs.yml  windows.yml
aarch64_test/: run-interpret.sh  run-jit.sh
bpf/: CMakeLists.txt
cmake/: options.cmake  settings.cmake
tests/: add.data  add64.data  alu-arith.data  alu-bit.data  alu.data  alu64-arith.data  alu64-bit.data  alu64.data  arsh-reg.data  arsh.data  arsh32-high-shift.data  arsh64.data  be16-high.data  be16.data  be32-high.data  be32.data  be64.data  call-memfrob.data  call-save.data  call.data  call_unwind.data  call_unwind_fail.data  div-by-zero-imm.data  div-by-zero-reg.data  div32-high-divisor.data  div32-imm.data  div32-reg.data  div64-by-zero-imm.data  div64-by-zero-reg.data  div64-imm.data  div64-negative-imm.data  div64-negative-reg.data  div64-reg.data  early-exit.data  err-call-bad-imm.data  err-call-unreg.data  err-invalid-reg-dst.data  err-invalid-reg-src.data  err-jmp-lddw.data  err-stack-oob.data  (+83 more)
tests/tcp-port-80/: tcp-port-80.asm
tests/tcp-sack/: tcp-sack.asm
ubpf_plugin/: CMakeLists.txt  test_helpers.h  ubpf_plugin.cc
vm/: Makefile  ebpf.h  test.c  ubpf_int.h  ubpf_jit.c  ubpf_jit_arm64.c  ubpf_jit_x86_64.c  ubpf_jit_x86_64.h  ubpf_loader.c  ubpf_vm.c
vm/compat/macos/: endian.h
vm/compat/windows/: endian.h  unistd.c  unistd.h
vm/compat/windows/sys/: mman.c  mman.h
vm/inc/: ubpf.h
